# OpenXPC

./: .clang-format  .gitignore  CMakeLists.txt  README.md
launchctl2/: CMakeLists.txt  Main.m  XPC.h  XPC.m
launchd2/: CMakeLists.txt  exec.cc  job.cc  launchd.hh  main.c  main.cc
libOpenXPC/: CMakeLists.txt  compat_sbuf.h  log.c  procutil.c  xpc_array.c  xpc_dbus.c  xpc_dictionary.c  xpc_internal.h  xpc_misc.c  xpc_type.c
libOpenXPC/OpenXPC/: config.h.in  connection.h  log.h  procutil.h  util.h  xpc.h
libsbuf/: CMakeLists.txt  debug.h  sbuf.c  sbuf.h
libxpc-dbus/: CMakeLists.txt  compat_sbuf.h  log.c  procutil.c  xpc.c  xpc_array.c  xpc_dbus.c  xpc_dictionary.c  xpc_internal.h  xpc_misc.c  xpc_type.c
libxpc-dbus/xpc2/: config.h.in  connection.h  log.h  osobject.h  procutil.h  util.h  xpc.h
xpcctl/: CMakeLists.txt  Main.m  XPC.h
xpcd/: CMakeLists.txt  job.cc  launchd.hh  main.cc
